--- a/Home.html
+++ b/Home.html
@@ -38,7 +38,7 @@
 <body>
 
   <div id="g_id_onload"
-       data-client_id="YOUR_GOOGLE_CLIENT_ID"
+       data-client_id="254127844746-gi0d09ebhmd30t037ghvgnhcfp06rf49.apps.googleusercontent.com"
        data-callback="handleCredentialResponse"
        data-auto_prompt="false">
   </div>
@@ -66,8 +66,8 @@
   </div>
 
   <script>
-    const API_KEY = "YOUR_THINGSPEAK_WRITE_API_KEY";
-    const CHANNEL_ID = "YOUR_CHANNEL_ID";
+    const API_KEY = "ON6ZTADDZWMJJOL2";
+    const CHANNEL_ID = "2907045";
 
     function handleCredentialResponse(response) {
       // A real project would verify the token on the server. Here we just proceed.
