Changed the API keys to correct ones

--- a/Home.html
+++ b/Home.html
@@ -66,8 +66,8 @@
   </div>
 
   <script>
-    const API_KEY = "ON6ZTADDZWMJJOL2";
-    const CHANNEL_ID = "2907045";
+    const API_KEY = "CHZ32FH8FO77JSFT";
+    const CHANNEL_ID = "2916038";
 
     function handleCredentialResponse(response) {
       // A real project would verify the token on the server. Here we just proceed.
