added relay 3 and 4

--- a/Index.html
+++ b/Index.html
@@ -26,6 +26,19 @@
           <span class="slider"></span>
         </label>
       </div>
+      <div class="relay-label">
+        <span>Relay 3</span>
+        <label class="switch">
+          <input type="checkbox" id="relay3" />
+          <span class="slider"></span>
+        </label>
+      </div>
+      <div class="relay-label">
+        <span>Relay 4</span>
+        <label class="switch">
+          <input type="checkbox" id="relay4" />
+          <span class="slider"></span>
+        </label>
     </div>
   </div>
 
