[fixed] nav bar; [added] info page

--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,20 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav class="navbar">
+    <div class="nav-left">
+      <img src="src/favicon.png" alt="Logo" class="nav-logo">
+    </div>
+    <div class="nav-center">
+      <h2>DOMOV</h2>
+    </div>
+    <div class="nav-right">
+      <button class="info-button" id="infoBtn">
+        <a class="info-icon" href="info.html">i</a>
+      </button>
+    </div>
+  </nav>
+  
   <div class="glass-card">
     <h1>Smart Relay Control</h1>
     <div class="relay-group">
@@ -26,7 +40,7 @@
           <span class="slider"></span>
         </label>
       </div>
-      <div class="relay-label">
+      <!-- <div class="relay-label">
         <span>Relay 3</span>
         <label class="switch">
           <input type="checkbox" id="relay3" />
@@ -39,7 +53,7 @@
           <input type="checkbox" id="relay4" />
           <span class="slider"></span>
         </label>
-    </div>
+    </div> -->
   </div>
 
   <!-- Firebase SDK -->
