--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="nav-right">
       <button class="info-button" id="infoBtn">
-        <a class="info-icon" href="info.html">i</a>
+        <a class="info-icon" href="https://domovautomation.netlify.app/info">i</a>
       </button>
     </div>
   </nav>
