info page customisation

--- a/info.html
+++ b/info.html
@@ -24,7 +24,7 @@ Home_Automation/info.html
     </div>
   </nav>
   
-  <div class="glass-card">
+  <div class="glass-card-info">
     <h1>Information</h1>
     <div class="info-content" id="fileContent">
       <!-- Content from file will be loaded here -->
